route_tables.json
{
    "RouteTables": [
        {
            "Associations": [
                {
                    "Main": false,
                    "RouteTableAssociationId": "rtbassoc-01f1826569dbae2fc",
                    "RouteTableId": "rtb-03eadb0cdd5646d5c",
                    "SubnetId": "subnet-054e81827b8d1825d",
                    "AssociationState": {
                        "State": "associated"
                    }
                },
                {
                    "Main": false,
                    "RouteTableAssociationId": "rtbassoc-0c9280771844fedbc",
                    "RouteTableId": "rtb-03eadb0cdd5646d5c",
                    "SubnetId": "subnet-0a215fe620bf37230",
                    "AssociationState": {
                        "State": "associated"
                    }
                }
            ],
            "PropagatingVgws": [],
            "RouteTableId": "rtb-03eadb0cdd5646d5c",
            "Routes": [
                {
                    "DestinationCidrBlock": "10.0.0.0/16",
                    "GatewayId": "local",
                    "Origin": "CreateRouteTable",
                    "State": "active"
                },
                {
                    "DestinationCidrBlock": "0.0.0.0/0",
                    "GatewayId": "igw-081ac87ce7fed18a7",
                    "Origin": "CreateRoute",
                    "State": "active"
                }
            ],
            "Tags": [
                {
                    "Key": "Name",
                    "Value": "dev-pulsequeue-vpc-public-rt"
                },
                {
                    "Key": "Environment",
                    "Value": "dev"
                },
                {
                    "Key": "Project",
                    "Value": "PulseQueue"
                },
                {
                    "Key": "ManagedBy",
                    "Value": "Terraform"
                }
            ],
            "VpcId": "vpc-08cb345ff33342bdf",
            "OwnerId": "379673441375"
        },
        {
            "Associations": [
                {
                    "Main": true,
                    "RouteTableAssociationId": "rtbassoc-7dbcc314",
                    "RouteTableId": "rtb-f7d14a9e",
                    "AssociationState": {
                        "State": "associated"
                    }
                }
            ],
            "PropagatingVgws": [],
            "RouteTableId": "rtb-f7d14a9e",
            "Routes": [
                {
                    "DestinationCidrBlock": "172.31.0.0/16",
                    "GatewayId": "local",
                    "Origin": "CreateRouteTable",
                    "State": "active"
                },
                {
                    "DestinationCidrBlock": "0.0.0.0/0",
                    "GatewayId": "igw-0dd86d64",
                    "Origin": "CreateRoute",
                    "State": "active"
                }
            ],
            "Tags": [],
            "VpcId": "vpc-ac1a8fc5",
            "OwnerId": "379673441375"
        },
        {
            "Associations": [
                {
                    "Main": true,
                    "RouteTableAssociationId": "rtbassoc-0a22b3fd03333e7ae",
                    "RouteTableId": "rtb-06cf95bf1dbf1ad06",
                    "AssociationState": {
                        "State": "associated"
                    }
                }
            ],
            "PropagatingVgws": [],
            "RouteTableId": "rtb-06cf95bf1dbf1ad06",
            "Routes": [
                {
                    "DestinationCidrBlock": "10.0.0.0/16",
                    "GatewayId": "local",
                    "Origin": "CreateRouteTable",
                    "State": "active"
                }
            ],
            "Tags": [],
            "VpcId": "vpc-08cb345ff33342bdf",
            "OwnerId": "379673441375"
        }
    ]
}
